@@ -293,7 +293,7 @@ int-import-graph=
 [FORMAT]
 
 # Maximum number of characters on a single line.
-max-line-length=79
+max-line-length=80
 
 # Maximum number of lines in a module
 max-module-lines=10000
